<resources>
    <string name="app_name">ScheduleTutor</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_tutor_main">TutorMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="daftar_kelas">Daftar Kelas</string>
    <string name="riwayat">Riwayat</string>
    <string name="keluar">Keluar</string>
    <string name="kelas_saya">Kelas Saya</string>
    <string name="photo">photo</string>
    <string name="daftar">Daftar</string>
    <string name="hapus">Hapus</string>
    <string name="Nama_Pelajaran"> Nama Pelajaran</string>
    <string name="Shift">Shift</string>
    <string name="Tanggal_dan_Waktu">Tanggal dan Waktu</string>
    <string name="Alamat">Alamat</string>
    <string name="Kirim">Kirim</string>
    <string name="Jam_Masuk">Jam Masuk</string>
    <string name="Jam_Selesai">Selesai</string>
    <string name="jmlh">Murid : 0 / 1</string>
</resources>
