<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/inNama"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:hint="@string/Nama_Pelajaran"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp">

        <EditText
            android:inputType="number"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/Shift" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:hint="Tanggal dan Waktu"
            />

        <EditText
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="14dp"
            android:background="@color/transparent"
            android:drawableStart="@drawable/ic_menu_calendar"
            android:paddingStart="1dp"
            android:paddingEnd="10dp"
            android:gravity="center_horizontal|top"
            android:inputType="datetime" />
    </LinearLayout>
    
    <EditText
        android:inputType="textLongMessage"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/Alamat"
        />


    <FrameLayout

        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="150dp"
        android:background="@color/orange" >

    <Button
        android:id="@+id/Kirim"
        android:hint="@string/Kirim"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:drawableEnd="@drawable/ic_menu_add"
        android:gravity="center"
        android:background="@drawable/btn_transparent"

    </FrameLayout>



</LinearLayout>